--- a/Assignment07/index.html
+++ b/Assignment07/index.html
@@ -65,5 +65,6 @@
 
     <script src="./productList.mjs" type="module"></script>
     <script src="./productmy.js" type="module"></script>
+    <script src="./cart.js" type="module"></script>
   </body>
 </html>
