--- a/Assignment07/index.html
+++ b/Assignment07/index.html
@@ -24,7 +24,7 @@
   <body>
     <!-- nav bar -->
     <nav class="navbar navbar-inverse">
-      <div class="containesr-fluid">
+      <div class="container-fluid">
         <div class="navbar-header">
           <a class="navbar-brand" href="#"> TEAM WANG </a>
         </div>
@@ -34,9 +34,11 @@
             <li class="pd"><a href="#"> Products </a></li>
 
             <!-- search -->
-            <li>
-              <a href="#"><i class="fa fa-search"></i></a>
-            </li>
+            <li><a id="search" class="fa fa-search"></a></li>
+            <span id="input" href="./img/magnifying-glass.png" class="invisible">
+                <input id="inputValue" placeholder="Search" type="text">
+                <button id="searchBtn" type="button" >Search</button>
+            </span>
           </ul>
 
           <!-- cart -->
@@ -44,7 +46,7 @@
             <li>
               <div id="ex4">
                 <!-- เลขสินค้าในตะกร้า -->
-                <span class="p1 fa-stack fa-2x has-badge" data-count="0" >
+                <span class="p1 fa-stack fa-2x has-badge" data-count="4">
                   <!-- cart icon -->
                   <i class="p3 fa fa-shopping-cart fa-stack-1x xfa-inverse"></i>
                 </span>
@@ -68,3 +70,7 @@
     <script src="./cart.js" type="module"></script>
   </body>
 </html>
+
+
+
+
